feat: now i can play mario

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <input type="file" id="file-selector" multiple>
+    <div id="app">
+
+      <input type="file" id="file-selector" multiple>
+    </div>
+    
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
